# Quadpong

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  setup.bat  setup.ps1  setup.sh
cmake/: FindFlatCC.cmake  FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake
src/: ball.c  ball.h  game_scene.c  game_scene.h  game_time.h  main.c  menu_scene.c  menu_scene.h  object.c  object.h  packet.fbs  player.c  player.h  quadpong.h  quapong.h  scene.c  scene.h  sprite.c  sprite.h  sprite_text.c  sprite_text.h  util.c  util.h  vec2.h
